--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "seed": "tsx lib/seed-all-jsonb.ts"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@google-cloud/aiplatform": "^6.0.0",
     "@hookform/resolvers": "^3.9.0",
     "@next/swc-wasm-nodejs": "13.5.1",
@@ -65,6 +68,7 @@
     "lucide-react": "^0.544.0",
     "next": "13.5.1",
     "next-themes": "^0.3.0",
+    "openai": "^6.16.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
