Security hardening: Middleware rate limiting, HTTP headers, Analytics migration, and dependencies update

--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
-    "@upstash/ratelimit": "^2.0.7",
-    "@upstash/redis": "^1.35.7",
+    "@upstash/ratelimit": "^2.0.8",
+    "@upstash/redis": "^1.36.2",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -66,7 +66,7 @@
     "jspdf": "^3.0.4",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
-    "next": "13.5.1",
+    "next": "^13.5.6",
     "next-themes": "^0.3.0",
     "openai": "^6.16.0",
     "postcss": "8.4.30",
